20070429
 - (dtucker) [openbsd-compat/bsd-misc.c] Include unistd.h and sys/types.h
   for select(2) prototype.
 - (dtucker) [auth-shadow.c loginrec.c] Include time.h for time(2) prototype.

20070406
 - (dtucker) [INSTALL] Update the systems that have PAM as standard.  Link
   to OpenPAM too.
 - (dtucker) [INSTALL] prngd lives at sourceforge these days.

20070326
 - (tim) [auth.c configure.ac defines.h session.c openbsd-compat/port-uw.c
   openbsd-compat/port-uw.h openbsd-compat/xcrypt.c] Rework libiaf test/defines
   to account for IRIX having libiaf but not set_id(). Patch with & ok dtucker@

20070325
 - (dtucker) [Makefile.in configure.ac] Replace single-purpose LIBSELINUX,
   LIBWRAP and LIBPAM variables in Makefile with the general-purpose
   SSHDLIBS.  "I like" djm@

20070321
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/03/09 05:20:06
     [servconf.c sshd.c]
     Move C/R -> kbdint special case to after the defaults have been
     loaded, which makes ChallengeResponse default to yes again.  This
     was broken by the Match changes and not fixed properly subsequently.
     Found by okan at demirmen.com, ok djm@ "please do it" deraadt@
   - djm@cvs.openbsd.org 2007/03/19 01:01:29
     [sshd_config]
     Disable the legacy SSH protocol 1 for new installations via
     a configuration override. In the future, we will change the
     server's default itself so users who need the legacy protocol
     will need to turn it on explicitly
   - dtucker@cvs.openbsd.org 2007/03/19 12:16:42
     [ssh-agent.c]
     Remove the signal handler that checks if the agent's parent process
     has gone away, instead check when the select loop returns.  Record when
     the next key will expire when scanning for expired keys.  Set the select
     timeout to whichever of these two things happens next.  With djm@, with &
     ok deraadt@ markus@
   - tedu@cvs.openbsd.org 2007/03/20 03:56:12
     [readconf.c clientloop.c]