@@ -2,6 +2,9 @@
  - (dtucker) [openbsd-compat/bsd-misc.c] Include unistd.h and sys/types.h
    for select(2) prototype.
  - (dtucker) [auth-shadow.c loginrec.c] Include time.h for time(2) prototype.
+ - (dtucker) [configure.ac openbsd-compat/getrrsetbyname.c] Bug #1299: Use the
+   platform's _res if it has one.  Should fix problem of DNSSEC record lookups
+   on NetBSD as reported by Curt Sampson.
 
 20070406
  - (dtucker) [INSTALL] Update the systems that have PAM as standard.  Link
@@ -2883,4 +2886,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4653 2007/04/29 02:10:57 dtucker Exp $
+$Id: ChangeLog,v 1.4654 2007/04/29 03:58:06 dtucker Exp $
